# revdict

./: README.md  TODO.md  pyproject.toml
docs/superpowers/plans/: 2026-07-04-reverse-dictionary-implementation.md  2026-07-05-daemon-warm-start-implementation.md  2026-07-05-stressmark-integration-implementation.md  2026-07-09-score-discount-ranking-implementation.md  2026-07-11-live-interactive-cli-implementation.md  2026-07-14-live-cli-copy-selection-implementation.md  2026-07-19-onelook-feature-parity-roadmap.md  2026-07-19-query-syntax-implementation.md  2026-07-19-sort-modes-implementation.md  2026-07-20-category-tagging-implementation.md  2026-07-20-phonetic-filters-implementation.md  2026-07-21-go-tui-implementation.md  2026-07-21-remaining-sort-modes-implementation.md
scripts/: evaluate_vocabulary_recovery.py
src/revdict/: category.py  cli.py  daemon.py  dictionary.py  paths.py  pattern_matcher.py  phonetics.py  picker.py  query_env.py  query_syntax.py  search.py  sort.py  structural_search.py
src/revdict/data/: build_index.py  (+5 more)
tests/: test_category.py  test_cli.py  test_daemon.py  test_dictionary.py  test_pattern_matcher.py  test_phonetics.py  test_picker.py  test_query_env.py  test_query_syntax.py  test_search.py  test_sort.py  test_structural_search.py
tests/data/: test_build_index.py  test_corpus.py  test_literary_frequency_source.py  test_nrc_emolex_source.py  test_wiktionary_source.py  test_wordnet_source.py
tests/models/: test_embedder.py  test_emotion.py  test_frequency.py  test_phonetics.py  test_reranker.py  test_stress.py
tui/: go.mod
(+36 files in other folders)
